remove blank password check, update config file, bump version

--- a/etc/xfsudo.conf
+++ b/etc/xfsudo.conf
@@ -10,6 +10,4 @@ mode=sudo
 #mode=root
 
 # Config file which can override above defaults
-if [ -e ~/.xfsudo.conf ]; then
-	source ~/.xfsudo.conf
-fi
+# ~/.xfsudo.conf
